fix alignment of play icon and music name in play list

--- a/webapp/src/app/app.component.css
+++ b/webapp/src/app/app.component.css
@@ -39,3 +39,10 @@
   justify-content: space-between;
   padding: 0;
 }
+
+
+.play-icon-and-name {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+}
